# moovolt-mvp

./: LICENSE  README.md  bun.lockb  components.json  index.html  package.json  tsconfig.json  unocss.config.ts  vite.config.ts
app/src/: App.tsx  main.tsx  protudos.ts
app/src/components/pages/: ErrorPage.tsx  Footer.tsx  Home.tsx  Layout.tsx  MenuCommand.tsx
app/src/components/ui/: Calculator.tsx  Review.tsx  UserForm.tsx
app/src/lib/: utils.ts
app/src/styles/: App.css
backend/: .env  Cargo.toml  rustfmt.toml
backend/src/: main.rs
backend/src/rpc/: mod.rs
